добавлен онлайн-режим для нод

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   openai_dart: ^0.5.5
   flutter_map: ^8.2.2
   latlong2: ^0.9.1
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
