--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_map: ^8.2.2
   latlong2: ^0.9.1
   http: ^1.5.0
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
